# games-e-commerce-back

./: .gitignore  README.md  manage.py  pyproject.toml
authentication/: permissions.py  serializers.py  urls.py  views.py
authentication/tests/: test_tokens.py  test_users.py
commercial/: admin.py  models.py  serializers.py  urls.py  views.py
commercial/migrations/: 0001_initial.py  0002_populate_products.py  0003_remove_cartitem_quantity_remove_orderitem_cart_and_more.py  0004_alter_product_image_alter_product_score.py
commercial/tests/: test_carts.py  test_orders.py  test_products.py
games_e_commerce/: asgi.py  settings.py  urls.py  utils.py  wsgi.py
